Fixed overflow (#1575)

--- a/app/style/components/user-input.less
+++ b/app/style/components/user-input.less
@@ -46,7 +46,7 @@ user-input {
   flex-wrap: wrap;
   margin-right: -17px;
   max-height: 84px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .search-inner > span {
